<resources>
    <string name="app_name">ScopeStorage</string>
    
    <string name="enter_post_title">Введите заголовок</string>
    <string name="enter_post_description">Введите описание</string>
    <string name="select_post_image">Выберите изображение</string>
    <string name="add_post">Добавить пост</string>
    <string name="change_post">Изменить пост</string>
    <string name="list_of_post">Список постов</string>
    <string name="app_specific_storage">App specific storage</string>
    <string name="shared_storage">Shared storage</string>
    <string name="internal_storage">Внутреннее хранилище</string>
    <string name="external_storage">Внешнее хранилище</string>
</resources>